Add full responsive 'categories' section

--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,35 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div class="container">
+          <div class="card-wrapper">
+            <div class="categories-card orange">
+              <p class="card-title">Акционные товары</p>
+              <div class="card-desc">
+                <p class="card-txt">Поступление нового товара за последние 7 календарных дней. Лучшие цены в Украине</p>
+                <button>подробне</button>
+              </div>
+            </div>
+            <div class="categories-card green">
+              <p class="card-title">Каталог товаров</p>
+              <div class="card-desc">
+                <p class="card-txt">Поступление нового товара за последние 7 календарных дней. Лучшие цены в Украине</p>
+                <button>подробне</button>
+              </div>
+            </div>
+            <div class="categories-card yellow">
+              <p class="card-title">Новые поступления</p>
+              <div class="card-desc">
+                <p class="card-txt">Поступление нового товара за последние 7 календарных дней. Лучшие цены в Украине</p>
+                <button>подробне</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <!-- jQuery lib-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
