Add full responsive banner slider

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,32 @@
       </div>
     </header>
     <main>
+      <section class="banner-slider">
+        <div class="container slider-wrap">
+          <div class="baner-item">
+            <picture>
+              <source srcset="../img/banner-slider-img-desktop.png" media="(min-width: 768px)"><img src="../img/banner-slider-img-mob.png">
+            </picture>
+            <div class="banner-slider-info">
+              <p class="desc">Акустический кабель Dialan медь 2*0,75мм прозрачный ПВХ 1м</p>
+              <p class="previous-price">БЫЛО 13,60 грн.</p>
+              <p class="current-price">12,24 грн.</p>
+              <button>Успейте купить</button>
+            </div>
+          </div>
+          <div class="baner-item">
+            <picture>
+              <source srcset="../img/banner-slider-img-desktop.png" media="(min-width: 768px)"><img src="../img/banner-slider-img-mob.png">
+            </picture>
+            <div class="banner-slider-info">
+              <p class="desc">Другой акустический кабель Dialan медь 1*0,5мм не прозрачный ПВХ 2м</p>
+              <p class="previous-price">БЫЛО 10,50 грн.</p>
+              <p class="current-price">8,34 грн.</p>
+              <button>Успейте купить</button>
+            </div>
+          </div>
+        </div>
+      </section>
       <section>
         <div class="container">
           <div class="card-wrapper">
@@ -106,7 +132,71 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-top">
+        <div class="container">
+          <ul>
+            <li>
+              <p>Новые поступления</p>
+              <p>Быстрая доставка по  всей Украине</p>
+            </li>
+            <li>
+              <p>Оплата и доставка</p>
+              <p>Быстрая доставка по  всей Украине</p>
+            </li>
+            <li>
+              <p>Наши прайс-листы</p>
+              <p>Быстрая доставка по  всей Украине</p>
+            </li>
+            <li>
+              <p>Наши магазины</p>
+              <p>Быстрая доставка по  всей Украине</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container">
+          <div>
+            <p>О компании</p>
+            <ul>
+              <li>Новое поступление</li>
+              <li>Новости</li>
+              <li>Контакты</li>
+              <li>Дропшопинг с нами</li>
+              <li>Сотрудничество с предприятиями</li>
+            </ul>
+          </div>
+          <div>
+            <p>Сервис</p>
+            <ul>
+              <li>Доставка и оплата</li>
+              <li>Наши прайс-листы</li>
+              <li>Каталог товаров</li>
+            </ul>
+          </div>
+          <div>
+            <p>Звоните нам</p>
+            <ul>
+              <li><a href="tel:+380965976862">096 597-68-62</a>
+                <p>пр. Правды 83/3</p>
+              </li>
+              <li><a href="tel:+380971140918">097 114-09-18</a>
+                <p>пр. Д. Яворницкого, 121</p>
+              </li>
+              <li><a href="tel:+380957946582">095 794-65-82</a>
+                <p>пр. Слобожанский, 83</p>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <p>Мы в соц сетях</p>
+            <div><a href="https://vk.com/"></a><a href="https://www.facebook.com/"></a><a href="https://ok.ru/"></a></div>
+            <p>© 2016 Radio<br>Store Разработка сайта<a href="">First Ukrainian Studio</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- jQuery lib-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Custom scripts-->
