Add full responsive footer

--- a/app/index.html
+++ b/app/index.html
@@ -18,13 +18,13 @@
         <div class="container">
           <div class="mob-burger-menu"><span>mob-burger-menu</span><span>mob-burger-menu</span><span>mob-burger-menu</span></div>
           <ul class="navigation">
-            <li><a href="/">О нас</a></li>
-            <li><a href="/">Новые поступления</a></li>
-            <li><a href="/">Доставка и оплата</a></li>
-            <li><a href="/">Прайс-листы</a></li>
-            <li><a href="/">Сотрудничество</a></li>
-            <li><a href="/">Контакты</a></li>
-          </ul><a class="auth" href="/">Вход / Регистрация</a>
+            <li><a href="/" target="">О нас</a></li>
+            <li><a href="/" target="">Новые поступления</a></li>
+            <li><a href="/" target="">Доставка и оплата</a></li>
+            <li><a href="/" target="">Прайс-листы</a></li>
+            <li><a href="/" target="">Сотрудничество</a></li>
+            <li><a href="/" target="">Контакты</a></li>
+          </ul><a class="auth" href="/" target="">Вход / Регистрация</a>
         </div>
       </div>
       <div class="header-item">
@@ -34,12 +34,12 @@
           </div>
           <div class="wrap">
             <div class="info">
-              <p class="work-time">Пн-Пт c 9:30 по 18:30</p><a class="phone-link" href="tel:+380965976862">096 597 68 62</a>
+              <p class="work-time">Пн-Пт c 9:30 по 18:30</p><a class="phone-link" href="tel:+380965976862" target="">096 597 68 62</a>
               <div class="phone-list-title">Все телефоны
                 <ul class="info-list">
-                  <li><a href="tel:+380965976800">096 597 68 00</a></li>
-                  <li><a href="tel:+380965976801">096 597 68 01</a></li>
-                  <li><a href="tel:+380965976802">096 597 68 02</a></li>
+                  <li><a href="tel:+380965976800" target="">096 597 68 00</a></li>
+                  <li><a href="tel:+380965976801" target="">096 597 68 01</a></li>
+                  <li><a href="tel:+380965976802" target="">096 597 68 02</a></li>
                 </ul>
               </div>
             </div>
@@ -66,11 +66,11 @@
             <div class="catalog-btn"><span>Меню товаров</span><span>Меню товаров</span><span>Меню товаров</span></div>
             <p>Каталог товаров</p>
             <ul class="catalog-lst">
-              <li><a href="/">Категория 1</a></li>
-              <li><a href="/">Категория 2</a></li>
-              <li><a href="/">Категория 3</a></li>
-              <li><a href="/">Категория 4</a></li>
-              <li><a href="/">Категория 5</a></li>
+              <li><a href="/" target="">Категория 1</a></li>
+              <li><a href="/" target="">Категория 2</a></li>
+              <li><a href="/" target="">Категория 3</a></li>
+              <li><a href="/" target="">Категория 4</a></li>
+              <li><a href="/" target="">Категория 5</a></li>
             </ul>
           </div>
           <input class="header-search" type="text" placeholder="Поиск в каталоге">
@@ -82,7 +82,7 @@
         <div class="container slider-wrap">
           <div class="baner-item">
             <picture>
-              <source srcset="../img/banner-slider-img-desktop.png" media="(min-width: 768px)"><img src="../img/banner-slider-img-mob.png">
+              <source srcset="../img/banner-slider-img-desktop.png" media="(min-width: 768px)"><img src="../img/banner-slider-img-mob.png" alt="banner-slider-img" title="banner-slider-img">
             </picture>
             <div class="banner-slider-info">
               <p class="desc">Акустический кабель Dialan медь 2*0,75мм прозрачный ПВХ 1м</p>
@@ -93,7 +93,7 @@
           </div>
           <div class="baner-item">
             <picture>
-              <source srcset="../img/banner-slider-img-desktop.png" media="(min-width: 768px)"><img src="../img/banner-slider-img-mob.png">
+              <source srcset="../img/banner-slider-img-desktop.png" media="(min-width: 768px)"><img src="../img/banner-slider-img-mob.png" alt="banner-slider-img" title="banner-slider-img">
             </picture>
             <div class="banner-slider-info">
               <p class="desc">Другой акустический кабель Dialan медь 1*0,5мм не прозрачный ПВХ 2м</p>
@@ -136,63 +136,75 @@
       <div class="footer-top">
         <div class="container">
           <ul>
-            <li>
-              <p>Новые поступления</p>
-              <p>Быстрая доставка по  всей Украине</p>
+            <li><img class="desk-icon" src="../img/footer-cart.png" alt="footer-cart" title="footer-cart">
+              <div>
+                <p class="top-list-title">Новые поступления</p>
+                <p>Быстрая доставка по<br class="desk-br"> всей Украине</p>
+              </div>
             </li>
-            <li>
-              <p>Оплата и доставка</p>
-              <p>Быстрая доставка по  всей Украине</p>
+            <li><img class="desk-icon" src="../img/footer-delivery.png" alt="footer-delivery" title="footer-delivery">
+              <div>
+                <p class="top-list-title">Оплата и доставка</p>
+                <p>Быстрая доставка по<br class="desk-br"> всей Украине</p>
+              </div>
             </li>
-            <li>
-              <p>Наши прайс-листы</p>
-              <p>Быстрая доставка по  всей Украине</p>
+            <li><img class="desk-icon" src="../img/footer-price.png" alt="footer-price" title="footer-price">
+              <div>
+                <p class="top-list-title">Наши прайс-листы</p>
+                <p>Быстрая доставка по<br class="desk-br"> всей Украине</p>
+              </div>
             </li>
-            <li>
-              <p>Наши магазины</p>
-              <p>Быстрая доставка по  всей Украине</p>
+            <li><img class="desk-icon" src="../img/footer-map.png" alt="footer-map" title="footer-map">
+              <div>
+                <p class="top-list-title">Наши магазины</p>
+                <p>Быстрая доставка по<br class="desk-br"> всей Украине</p>
+              </div>
             </li>
           </ul>
         </div>
       </div>
       <div class="footer-bottom">
         <div class="container">
-          <div>
-            <p>О компании</p>
-            <ul>
-              <li>Новое поступление</li>
-              <li>Новости</li>
-              <li>Контакты</li>
-              <li>Дропшопинг с нами</li>
-              <li>Сотрудничество с предприятиями</li>
-            </ul>
+          <div class="footer-bottom-item">
+            <div class="bottom-subitem">
+              <p class="subitem-title">О компании</p>
+              <ul>
+                <li>Новое поступление</li>
+                <li>Новости</li>
+                <li>Контакты</li>
+                <li>Дропшопинг с нами</li>
+                <li>Сотрудничество с предприятиями</li>
+              </ul>
+            </div>
+            <div class="bottom-subitem">
+              <p class="subitem-title">Сервис</p>
+              <ul>
+                <li>Доставка и оплата</li>
+                <li>Наши прайс-листы</li>
+                <li>Каталог товаров</li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <p>Сервис</p>
-            <ul>
-              <li>Доставка и оплата</li>
-              <li>Наши прайс-листы</li>
-              <li>Каталог товаров</li>
-            </ul>
-          </div>
-          <div>
-            <p>Звоните нам</p>
-            <ul>
-              <li><a href="tel:+380965976862">096 597-68-62</a>
-                <p>пр. Правды 83/3</p>
-              </li>
-              <li><a href="tel:+380971140918">097 114-09-18</a>
-                <p>пр. Д. Яворницкого, 121</p>
-              </li>
-              <li><a href="tel:+380957946582">095 794-65-82</a>
-                <p>пр. Слобожанский, 83</p>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <p>Мы в соц сетях</p>
-            <div><a href="https://vk.com/"></a><a href="https://www.facebook.com/"></a><a href="https://ok.ru/"></a></div>
-            <p>© 2016 Radio<br>Store Разработка сайта<a href="">First Ukrainian Studio</a></p>
+          <div class="footer-bottom-item">
+            <div class="bottom-subitem">
+              <p class="subitem-title">Звоните нам</p>
+              <ul>
+                <li><a href="tel:+380965976862" target="">096 597-68-62</a>
+                  <p>пр. Правды 83/3</p>
+                </li>
+                <li><a href="tel:+380971140918" target="">097 114-09-18</a>
+                  <p>пр. Д. Яворницкого, 121</p>
+                </li>
+                <li><a href="tel:+380957946582" target="">095 794-65-82</a>
+                  <p>пр. Слобожанский, 83</p>
+                </li>
+              </ul>
+            </div>
+            <div class="bottom-subitem">
+              <p class="subitem-title">Мы в соц сетях</p>
+              <div class="footer-bottom-social"><a class="vk" href="https://vk.com/" target="_blank"></a><a class="facebook" href="https://www.facebook.com/" target="_blank"></a><a class="ok" href="https://ok.ru/" target="_blank"></a></div>
+              <p class="privacy">© 2016 Radio Store<br>Разработка сайта <a href="/" target="_blank"> First Ukrainian Studio</a></p>
+            </div>
           </div>
         </div>
       </div>
