Add full responsive info section

--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,93 @@
           </div>
         </div>
       </section>
+      <section class="info-section">
+        <div class="container">
+          <div class="info-section-item">
+            <h3>О нас</h3>
+            <div class="info-item-wrap">
+              <div class="inner-item about-us">
+                <p>
+                  Мы являемся современной, быстро развивающейся компанией, в которой основными принципами работыявляются высокий профессионализм, отвественность перед каждым клиентом и надежность гаранитруемого
+                  результата.
+                </p>
+                <p>
+                  В жизнь эти принципы воплощаются командой высококвалифицированных специалистов, которые рабтают наблаго компании и разделяют общие ценности и цели.</p><a href="/" target="">Подробнее</a>
+              </div>
+            </div>
+          </div>
+          <div class="info-section-item">
+            <h3>Товар дня</h3>
+            <div class="info-item-wrap">
+              <div class="day-product-item"><img src="../img/day-product-1.png" alt="day-product-1" title="day-product-1">
+                <div>
+                  <p>Автомобильный блок питания для ноутбука ASUS W5G00A 19V 3.42 A 5.5x2.5</p>
+                  <div class="day-product-subtitle">
+                    <div class="delivery-info">
+                      <p class="delivery-title">Есть доставка</p>
+                      <p class="amount">В наличии 23 шт.</p>
+                    </div>
+                    <div class="price-info">
+                      <p class="price-title">Цена за шт.</p>
+                      <p class="price">188,40 грн.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="day-product-item"><img src="../img/day-product-1.png" alt="day-product-2" title="day-product-2">
+                <div>
+                  <p>Автомобильный блок питания для ноутбука ASUS W5G00A 19V 3.42 A 5.5x2.5</p>
+                  <div class="day-product-subtitle">
+                    <div class="delivery-info">
+                      <p class="delivery-title">Есть доставка</p>
+                      <p class="amount">В наличии 23 шт.</p>
+                    </div>
+                    <div class="price-info">
+                      <p class="price-title">Цена за шт.</p>
+                      <p class="price">188,40 грн.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="info-section-item">
+            <h3>Полезности</h3>
+            <div class="info-item-wrap">
+              <div class="usefull-item">
+                <div class="usefull-item-date">
+                  <p class="date-day">15</p>
+                  <p>декабря</p>
+                </div>
+                <div class="usefull-item-desc">
+                  <p class="usefull-item-title">Обзор паяльной станции Yihua 898BD+ 2 в 1</p>
+                  <p>Представляем вашему вниманию видеообзор паяльнойстанции...</p>
+                </div>
+              </div>
+              <div class="usefull-item">
+                <div class="usefull-item-date">
+                  <p class="date-day">17</p>
+                  <p>декабря</p>
+                </div>
+                <div class="usefull-item-desc">
+                  <p class="usefull-item-title">Обзор паяльной станции Yihua 898BD+ 2 в 1</p>
+                  <p>Представляем вашему вниманию видеообзор паяльнойстанции...</p>
+                </div>
+              </div>
+              <div class="usefull-item">
+                <div class="usefull-item-date">
+                  <p class="date-day">19</p>
+                  <p>декабря</p>
+                </div>
+                <div class="usefull-item-desc">
+                  <p class="usefull-item-title">Обзор паяльной станции Yihua 898BD+ 2 в 1</p>
+                  <p>Представляем вашему вниманию видеообзор паяльнойстанции...</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-top">
