Add full responsive best products slider

--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,14 @@
           </div>
         </div>
       </section>
+      <section class="categories-sect">
+        <div class="container">
+          <h2><span>Лучшие предложения</span></h2>
+          <div class="best-goods-wrapper">
+            <!-- Render content from JSON-->
+          </div>
+        </div>
+      </section>
       <section class="info-section">
         <div class="container">
           <div class="info-section-item">
