Add cart functionality

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,19 @@
         </div>
       </div>
     </header>
+    <div class="popup-cart-wrap">
+      <div class="cart-popup">
+        <button>close popup</button>
+        <p class="form-title">Регистрация</p>
+        <form>
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="+38(___)___-___-____">
+          <input type="text" placeholder="E-mail">
+          <div class="choosen-goods"></div>
+          <input type="submit" value="оформить">
+        </form>
+      </div>
+    </div>
     <main>
       <section class="banner-slider">
         <div class="container slider-wrap">
